--- a/bruce/UnityVS.bruce.CSharp.csproj
+++ b/bruce/UnityVS.bruce.CSharp.csproj
@@ -57,6 +57,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\base\Resource\NADResourceManager.cs" />
     <Compile Include="Assets\Script\base\event\Core\Controller.cs" />
     <Compile Include="Assets\Script\base\event\Core\Model.cs" />
     <Compile Include="Assets\Script\base\event\Core\View.cs" />
@@ -79,6 +80,8 @@
     <Compile Include="Assets\Script\base\event\Patterns\Observer\Observer.cs" />
     <Compile Include="Assets\Script\base\event\Patterns\Proxy\Proxy.cs" />
     <Compile Include="Assets\Script\game\App.cs" />
+    <Compile Include="Assets\Script\test\EventSource.cs" />
+    <Compile Include="Assets\Script\test\Listener.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
